# actix-web-todo

todo-api/: .gitignore  Cargo.toml
todo-api/migrations/2021-05-07-074442_create_todos/: down.sql  up.sql
todo-api/src/: actions.rs  main.rs  models.rs  schema.rs
todo-client/: .eslintrc.json  api.ts  package-lock.json  package.json  tsconfig.json
todo-client/api/: task.ts  todo.ts
todo-client/components/: AddTaskForm.tsx  AddTodoForm.tsx  ChangeCommandTextField.tsx  ChangeCommandTextsDialog.tsx  ChangeCommandTextsTodoItem.tsx  ChangeFontSizeCommandTodo.tsx  ChangeFontSizeDialog.tsx  ChangeFontSizeTaskItem.tsx  ChangeFontSizeTodoItem.tsx  CommonTaskItem.tsx  CommonTodoItem.tsx  DisplayCommandButton.tsx  DoneBox.tsx  DoneBoxIcon.tsx  DoneItem.tsx  ErrorAlert.tsx  ErrorBoundary.tsx  GiveUpAllCommandTodo.tsx  GiveUpAllTodoItem.tsx  GiveUpDialog.tsx  Header.tsx  MotionBox.tsx  TaskApp.tsx  TaskCheckBox.tsx  TaskItem.tsx  TaskItemBase.tsx  TodoApp.tsx  TodoCheckBox.tsx  TodoItem.tsx  TodoItemFactory.tsx  TodoList.tsx
todo-client/context/: AppContext.tsx  TodosContext.tsx
todo-client/contexts/: TaskFontSizeContext.tsx  TasksContext.tsx
todo-client/hooks/: useCommandObjs.tsx  useCommandTexts.tsx  useCommandsInfo.tsx  useTaskFontSize.tsx  useTasks.tsx  useTodos.tsx
todo-client/pages/: _app.tsx  index.tsx
todo-client/theme/: index.ts
todo-client/types/: ChakraMotionProps.ts
todo-client/utils/: assertNever.ts
