[package]
name = "todo-api"
version = "0.1.0"
authors = ["hwld <0701hw@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = "1"
diesel = { version = "^1.4.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.9"
uuid = { version = "0.8", features = ["v4"] }